--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-"pandas" 
-"numpy" 
-"tensorflow" 
-"matplotlib" 
-"seaborn" 
-"scikit-learn" 
+pandas 
+numpy 
+tensorflow 
+matplotlib 
+seaborn
+scikit-learn
+opencv-python
+imutils
+numpy
+tensorflow
